Long lines in 'code' blocks should be split - If lines inside 'span.code pre' selector are longer then a screen width, it is very hard to read and interpret results properly. - It is only a small but needed CSS fix. - There is no change regarding logic or behaviour.   - All CSS properties are supported by major browsers (included IE 8 and above).   - Sources:     - https://developer.mozilla.org/en-US/docs/Web/CSS/white-space     - https://developer.mozilla.org/en-US/docs/Web/CSS/word-wrap     - https://developer.mozilla.org/en-US/docs/Web/CSS/word-break

--- a/subprojects/core/src/main/resources/org/gradle/reporting/base-style.css
+++ b/subprojects/core/src/main/resources/org/gradle/reporting/base-style.css
@@ -166,6 +166,9 @@ span.code pre {
     min-width: 700px;
     width: auto !important;
     width: 700px;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    word-break: break-all;
 }
 
 span.wrapped pre {
